# boxbackup

./: .cirrus.yml  .gitattributes  .gitignore  .travis.yml  BUGS.txt  BoxPlatform.pm.in  COMMON-MANIFEST.txt  CONTRIBUTING.md  COPYING.txt  LICENSE-DUAL.rtf  LICENSE-DUAL.txt  LICENSE-GPL.txt  LICENSE.txt  Makefile  NETBSD.txt  README.md  THANKS.txt  TODO.txt  UPGRADING.txt  VERSION.txt  adminguide.xml  appveyor.yml  bb-book.xsl  bbackupctl.vcproj  bbackupctl.xml  bbackupd-config.xml  bbackupd.vcproj  bbackupd.xml  bbackupquery.xml  bbstoreaccounts.xml  bbstored-certs.xml  bbstored-config.xml  bbstored.xml  bootstrap  boxbackup-0.09_plus2_vc2005fix_r379-backup-client-mingw32.tgz  boxbackup-0.09_plus2_vc2005fix_r386-backup-client-mingw32.tgz  boxbackup-RELEASE_0_11_2745-backup-client-mingw32.tgz  boxbackup.sln  boxquery.vcproj  buildenv-testmain-template.cpp  (+23 more)
0.11/: .hgignore  parcels.txt  runtest.pl.in
TEMP_for_autoconfification/: database_tests.pl
backup/: lib_backupstore.txt  win32_build_on_cygwin_using_mingw.txt  win32_build_on_linux_using_mingw.txt
backupclient/: BackupClientCryptoKeys.cpp  BackupClientCryptoKeys.h  BackupClientFileAttributes.cpp  BackupClientFileAttributes.h  BackupClientRestore.cpp  BackupDaemonConfigVerify.cpp  BackupStoreException.h  BackupStoreFile.cpp  BackupStoreFile.h  BackupStoreFileDiff.cpp  BackupStoreFileEncodeStream.cpp  BackupStoreFileEncodeStream.h  BackupStoreFilename.h  BackupStoreFilenameClear.cpp  BackupStoreObjectDump.cpp  BackupStoreObjectMagic.h  Makefile.extra
backupdiff/: testbackupdiff.cpp
backupstore/: BackupStoreCheck.cpp  BackupStoreCheck2.cpp  BackupStoreCheckData.cpp  BackupStoreConfigVerify.cpp  BackupStoreInfo.cpp  BackupStoreInfo.h  BackupStoreRefCountDatabase.h  StoreStructure.h  testbackupstore.cpp
backupstorefix/: testbackupstorefix.cpp
backupstorepatch/: testbackupstorepatch.cpp
basicserver/: TestCommands.cpp  testbasicserver.cpp
bbackupctl/: bbackupctl.cpp
bbackupd/: BackupClientContext.cpp  BackupClientContext.h  BackupClientDeleteList.h  BackupClientDirectoryRecord.cpp  BackupClientDirectoryRecord.h  BackupClientInodeToIDMap.cpp  BackupDaemon.cpp  BackupDaemon.h  Makefile.extra  Win32BackupService.cpp  Win32ServiceFunctions.cpp  Win32ServiceFunctions.h  bbackupd-config  bbackupd-config.in  bbackupd.cpp  testbbackupd.cpp
bbackupobjdump/: bbackupobjdump.cpp
bbackupquery/: BackupQueries.cpp  BackupQueries.h  BoxBackupCompareParams.h  bbackupquery.cpp  documentation.txt  makedocumentation.pl
bbadmin/: accounts.cgi
bbstoreaccounts/: bbstoreaccounts.cpp
bbstored/: BBStoreDHousekeeping.cpp  BackupCommands.cpp  BackupContext.cpp  BackupStoreContext.h  BackupStoreDaemon.cpp  BackupStoreDaemon.h  HousekeepStoreAccount.cpp  HousekeepStoreAccount.h  bbstored-config.in
boxbackup/: CONTACT.txt  DISTRIBUTION-MANIFEST.txt  LICENSE.txt  Makefile  VERSION.txt  adminguide.xml  bb-book.xsl  bb-man.xsl  bbackupctl.xml  bbstored-certs.xml  instguide.xml  raidfile-config.xml
common/: BannerText.h  BeginStructPackForWire.h  Box.h  BoxException.cpp  BoxException.h  BoxPlatform.h  BoxPortsAndFiles.h.in  BoxTime.cpp  BoxTime.h  BoxTimeToText.cpp  Configuration.cpp  Configuration.h  ConversionString.cpp  DebugAssertFailed.cpp  DebugMemLeakFinder.cpp  EventWatchFilesystemObject.cpp  ExcludeList.cpp  ExcludeList.h  FileModificationTime.cpp  FileModificationTime.h  FileStream.cpp  FileStream.h  Guards.h  IOStream.cpp  IOStreamGetLine.h  Logging.cpp  Logging.h  MemLeakFindOff.h  MemLeakFinder.h  NamedLock.cpp  ReadLoggingStream.h  TemporaryDirectory.h  Test.cpp  Test.h  Timer.cpp  Timer.h  UnixUser.cpp  Utils.cpp  Utils.h  WaitForEvent.h  (+2 more)
compress/: Compress.h
crypto/: Makefile.extra  Random.cpp  Random.h
cygwin/: README.txt
debian/: bbackupd.in  bbstored.in
distribution/: COMMON-MANIFEST.txt
docs/: Makefile  adminguide.xml
documentation/: Makefile  bb-man.xsl.tmpl  bbackupctl.xml  bbackupd.conf.xml  bbackupd.xml  bbackupquery.xml  bblogo-alpha.xcf  bbstoreaccounts.xml  bbstored-certs.xml  bbstored-config.xml  bbstored.conf.xml  bbstored.xml  generate_except_xml.pl  raidfile-config.xml
httpserver/: HTTPException.txt  HTTPQueryDecoder.cpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPResponse.h  HTTPServer.cpp  HTTPServer.h  testhttpserver.cpp
infrastructure/: BoxPlatform.pm  BoxPlatform.pm.in  buildenv-testmain-template.cpp  makebuildenv.pl  makebuildenv.pl.in  makedistribution.pl  makedistribution.pl.in  makeparcels.pl  makeparcels.pl.in  printversion.pl  setup-debian-chroot.sh  setupexternal.pl  travis-build.sh
infrastructure/cmake/: .gitignore  CMakeLists.txt  FindReadline.cmake  getversion.pl
infrastructure/cmake/windows/: CMakeLists.txt
intercept/: intercept.cpp  intercept.h
m4/: ax_check_bdb_v1.m4  ax_check_define_pragma.m4  ax_check_dirent_d_type.m4  ax_check_malloc_workaround.m4  ax_check_syscall_lseek.m4  ax_func_syscall.m4
mac_osx/: org.boxbackup.bbackupd.plist.in
merge/: BUGS.txt  COPYING.txt  configure.ac  parcels.txt
mingw/: configure.sh
notes/: memory_leaks.txt
qdbm/: ChangeLog  LTmakefile.in  Makefile.in  NEWS  README  RISCmakefile  THANKS  VCmakefile  cabin.c  cabin.h  cbcodec.c  cbtest.c  configure.in  crmgr.c  crtsv.c  curia.h  depot.c  depot.h  dpmgr.c  dptsv.c  hovel.c  hovel.h  hvmgr.c  hvtest.c  myconf.c  myconf.h  odeum.c  odeum.h  odidx.c  odmgr.c  qdbm.def  qdbm.pc.in  qmttest.c  relic.c  rlmgr.c  rltest.c  spex.html  villa.c  villa.h  vista.c  (+4 more)
qdbm/misc/: README-win32.txt  VCmakefile-old  index.html  index.ja.html  makevcdef  mymemo-ja.html  tutorial-ja.html  win32check.bat
raidfile/: RaidFileController.cpp  RaidFileController.h  RaidFileException.h  RaidFileRead.cpp  RaidFileWrite.cpp  RaidFileWrite.h  intercept.cpp  make-darwin-intercepts.pl  testraidfile.cpp
redhat/: README.txt  bbackupd.in  bbstored.in
replace/: .revinfo.git
rpm/: boxbackup.spec
server/: ConnectionException.txt  Daemon.cpp  Daemon.h  LocalProcessStream.cpp  Makefile.extra  Protocol.cpp  Protocol.h  ProtocolUncertainStream.cpp  ProtocolWire.h  SSLLib.cpp  SSLLib.h  ServerControl.cpp  (+11 more)
(+2531 files in other folders)
